--- a/iOS-Starter/Storyboard/Base.lproj/Main.storyboard
+++ b/iOS-Starter/Storyboard/Base.lproj/Main.storyboard
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="IAX-Yu-PzM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="IAX-Yu-PzM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,7 +13,7 @@
         <!--Home-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="iOS-Starter" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="iOS_Starter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -57,7 +55,7 @@
         <!--Menu-->
         <scene sceneID="16F-gX-kBr">
             <objects>
-                <viewController storyboardIdentifier="GridMenuVC" id="PTC-sA-EKp" customClass="GridMenuVC" customModule="iOS-Starter" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="GridMenuVC" id="PTC-sA-EKp" customClass="GridMenuVC" customModule="iOS_Starter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Y2W-Rg-4uH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -76,14 +74,14 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="GridMenuCell" id="j4t-GX-Mm6" customClass="GridMenuCell" customModule="iOS-Starter" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="GridMenuCell" id="j4t-GX-Mm6" customClass="GridMenuCell" customModule="iOS_Starter" customModuleProvider="target">
                                         <rect key="frame" x="75" y="231" width="225" height="155"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="225" height="155"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4qw-R5-TpX">
+                                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4qw-R5-TpX">
                                                     <rect key="frame" x="94" y="37" width="40" height="68.5"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="8r1-Da-hdG">
@@ -149,7 +147,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="211"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l4a-PW-52n" customClass="ImagePagerView" customModule="iOS-Starter" customModuleProvider="target">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l4a-PW-52n" customClass="ImagePagerView" customModule="iOS_Starter" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="211"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
@@ -157,7 +155,7 @@
                             </constraints>
                         </view>
                         <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="K7O-4R-Elf">
-                            <rect key="frame" x="177" y="95" width="20" height="20"/>
+                            <rect key="frame" x="177.5" y="95.5" width="20" height="20"/>
                         </activityIndicatorView>
                         <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TbV-xV-DkD">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="211"/>
@@ -199,7 +197,7 @@
         <!--Drawer MenuVC-->
         <scene sceneID="27W-08-vkx">
             <objects>
-                <viewController storyboardIdentifier="DrawerMenuVC" id="hD6-3s-Yd6" customClass="DrawerMenuVC" customModule="iOS-Starter" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DrawerMenuVC" id="hD6-3s-Yd6" customClass="DrawerMenuVC" customModule="iOS_Starter" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="BDw-K0-wlL"/>
                         <viewControllerLayoutGuide type="bottom" id="GLG-8d-jkc"/>
@@ -238,7 +236,7 @@
                                     </constraints>
                                 </view>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="16" reuseIdentifier="DrawerMenuCell" rowHeight="50" id="LzZ-cc-8PO" customClass="DrawerMenuCell" customModule="iOS-Starter" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="16" reuseIdentifier="DrawerMenuCell" rowHeight="50" id="LzZ-cc-8PO" customClass="DrawerMenuCell" customModule="iOS_Starter" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="228" width="375" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LzZ-cc-8PO" id="vVv-CC-lKL">
@@ -256,7 +254,7 @@
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Silahkan Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HxO-qG-XIR">
-                                                    <rect key="frame" x="59" y="16" width="301" height="19.5"/>
+                                                    <rect key="frame" x="59" y="15.5" width="301" height="19.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -343,7 +341,7 @@
         <!--Tab Bar MenuVC-->
         <scene sceneID="COr-Wd-eow">
             <objects>
-                <tabBarController storyboardIdentifier="TabBarMenuVC" id="qAj-cV-15M" customClass="TabBarMenuVC" customModule="iOS-Starter" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabBarMenuVC" id="qAj-cV-15M" customClass="TabBarMenuVC" customModule="iOS_Starter" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="0gI-AP-ReV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -368,6 +366,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="blank_image" width="131" height="131"/>
+        <image name="blank_image" width="263" height="263"/>
     </resources>
 </document>
