--- a/Application/Storyboard/Base.lproj/Main.storyboard
+++ b/Application/Storyboard/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="IAX-Yu-PzM">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="IAX-Yu-PzM">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,24 +17,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="iOS Starter" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hzh-g8-vB4">
-                                <rect key="frame" x="111" y="347.5" width="153.5" height="36"/>
+                                <rect key="frame" x="110.5" y="337.5" width="154" height="36"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Select Picker" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rb5-lQ-bmh">
-                                <rect key="frame" x="111" y="403.5" width="153.5" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="rb5-lQ-bmh" firstAttribute="leading" secondItem="Hzh-g8-vB4" secondAttribute="leading" id="Kkk-EY-890"/>
                             <constraint firstItem="Hzh-g8-vB4" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="O5m-fh-6YH"/>
-                            <constraint firstItem="rb5-lQ-bmh" firstAttribute="trailing" secondItem="Hzh-g8-vB4" secondAttribute="trailing" id="PDw-Hg-a0V"/>
-                            <constraint firstItem="rb5-lQ-bmh" firstAttribute="top" secondItem="Hzh-g8-vB4" secondAttribute="bottom" constant="20" id="PUt-0X-LLJ"/>
                             <constraint firstItem="Hzh-g8-vB4" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="djo-zd-oVc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -44,9 +33,6 @@
                     <navigationItem key="navigationItem" title="Home" id="ek8-YX-gXL">
                         <barButtonItem key="backBarButtonItem" title=" " id="gl3-aV-8lD"/>
                     </navigationItem>
-                    <connections>
-                        <outlet property="field" destination="rb5-lQ-bmh" id="syR-TB-2RK"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -65,7 +51,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="K1g-Si-kOg">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="623"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="bIF-SC-ueg">
                                     <size key="itemSize" width="225" height="155"/>
@@ -192,7 +178,7 @@
                     <viewLayoutGuide key="safeArea" id="6BO-XX-FMi"/>
                 </view>
             </objects>
-            <point key="canvasLocation" x="793" y="1044"/>
+            <point key="canvasLocation" x="793" y="808"/>
         </scene>
         <!--Drawer MenuVC-->
         <scene sceneID="27W-08-vkx">
@@ -207,7 +193,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="67" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BE6-Gb-qPh">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="AL6-Tx-NMy">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
@@ -308,7 +294,7 @@
                 <navigationController storyboardIdentifier="ViewControllerNav" automaticallyAdjustsScrollViewInsets="NO" id="IAX-Yu-PzM" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Uic-RW-56I">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -326,7 +312,7 @@
                 <navigationController storyboardIdentifier="GridMenuVCNav" automaticallyAdjustsScrollViewInsets="NO" id="eaY-yM-qPj" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="DVc-q5-HWd">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -349,20 +335,20 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="14g-TA-Ptj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="793" y="1724"/>
+            <point key="canvasLocation" x="793" y="1477"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="dhR-3D-p9a">
             <objects>
                 <navigationController storyboardIdentifier="TabBarMenuVCNav" id="Gp4-ml-F4x" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="YLz-PV-WvA">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p7L-I6-Ier" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="142" y="1724"/>
+            <point key="canvasLocation" x="142" y="1477"/>
         </scene>
     </scenes>
     <resources>
