--- a/iOStarter/View/AlertView/AlertSheetView.xib
+++ b/iOStarter/View/AlertView/AlertSheetView.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -19,12 +18,12 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="gqx-4K-WV2">
+        <view contentMode="scaleToFill" id="gqx-4K-WV2">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pLN-7n-rrV" customClass="View" customModule="iOStarter" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="632.5" width="414" height="229.5"/>
+                    <rect key="frame" x="0.0" y="666.5" width="414" height="229.5"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="drX-hT-dlU">
                             <rect key="frame" x="16" y="20" width="382" height="144.5"/>
@@ -84,12 +83,11 @@
                     </userDefinedRuntimeAttributes>
                 </view>
             </subviews>
-            <viewLayoutGuide key="safeArea" id="UWg-71-bTR"/>
             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="UWg-71-bTR" firstAttribute="trailing" secondItem="pLN-7n-rrV" secondAttribute="trailing" id="SPV-vw-mVQ"/>
-                <constraint firstItem="UWg-71-bTR" firstAttribute="bottom" secondItem="pLN-7n-rrV" secondAttribute="bottom" id="UcD-Is-sH3"/>
-                <constraint firstItem="pLN-7n-rrV" firstAttribute="leading" secondItem="UWg-71-bTR" secondAttribute="leading" id="z4E-Ok-8od"/>
+                <constraint firstAttribute="trailing" secondItem="pLN-7n-rrV" secondAttribute="trailing" id="SPV-vw-mVQ"/>
+                <constraint firstAttribute="bottom" secondItem="pLN-7n-rrV" secondAttribute="bottom" id="UcD-Is-sH3"/>
+                <constraint firstItem="pLN-7n-rrV" firstAttribute="leading" secondItem="gqx-4K-WV2" secondAttribute="leading" id="z4E-Ok-8od"/>
                 <constraint firstItem="pLN-7n-rrV" firstAttribute="width" secondItem="gqx-4K-WV2" secondAttribute="width" id="zw1-hd-Ap9"/>
             </constraints>
             <point key="canvasLocation" x="139" y="118"/>
